[package]
name = "blockchain_project"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
solana-program = "1.18"
solana-sdk = "1.18"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"
