[package]
name = "blockchain_project"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1.0", features = ["full"] }
bincode = "1.3.3"
rand = "0.8"
ring = "0.17"
hex = "0.4"
